--- a/lab1/TF_Part1_Intro.ipynb
+++ b/lab1/TF_Part1_Intro.ipynb
@@ -71,10 +71,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "LkaimNJfYZ2w",
-        "outputId": "7bd6260f-5cf9-41e7-d3e5-20fdb83e413c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7bd6260f-5cf9-41e7-d3e5-20fdb83e413c"
       },
       "outputs": [
         {
@@ -118,10 +118,10 @@
       "execution_count": 4,
       "metadata": {
         "id": "tFxztZQInlAB",
-        "outputId": "0ea7fa08-faff-4d76-bd02-3830b934de87",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0ea7fa08-faff-4d76-bd02-3830b934de87"
       },
       "outputs": [
         {
@@ -168,10 +168,10 @@
       "execution_count": 5,
       "metadata": {
         "id": "oaHXABe8oPcO",
-        "outputId": "9b9ac171-45e9-455f-b4e3-a06e3e099f04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9b9ac171-45e9-455f-b4e3-a06e3e099f04"
       },
       "outputs": [
         {
@@ -252,10 +252,10 @@
       "execution_count": 10,
       "metadata": {
         "id": "FhaufyObuLEG",
-        "outputId": "cda080af-1397-46aa-9894-156403cc3c5b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cda080af-1397-46aa-9894-156403cc3c5b"
       },
       "outputs": [
         {
@@ -296,10 +296,10 @@
       "execution_count": 11,
       "metadata": {
         "id": "X_YJrZsxYZ2z",
-        "outputId": "a3f90925-d55d-4ec9-f010-444464a27432",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a3f90925-d55d-4ec9-f010-444464a27432"
       },
       "outputs": [
         {
@@ -346,10 +346,10 @@
       "metadata": {
         "id": "PJnfzpWyYZ23",
         "scrolled": true,
-        "outputId": "3ab59241-3330-435e-9849-2db2f3d74ffd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3ab59241-3330-435e-9849-2db2f3d74ffd"
       },
       "outputs": [
         {
@@ -392,10 +392,10 @@
       "execution_count": 21,
       "metadata": {
         "id": "pnwsf8w2uF7p",
-        "outputId": "202bcdc1-a572-4732-f5be-6060ae76beb8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "202bcdc1-a572-4732-f5be-6060ae76beb8"
       },
       "outputs": [
         {
@@ -471,10 +471,10 @@
         "\n",
         "  def call(self, x):\n",
         "    '''TODO: define the operation for z (hint: use tf.matmul)'''\n",
-        "    z = # TODO\n",
+        "    z = tf.matmul(x, self.W) + self.b\n",
         "\n",
         "    '''TODO: define the operation for out (hint: use tf.sigmoid)'''\n",
-        "    y = # TODO\n",
+        "    y = tf.sigmoid(z)\n",
         "    return y\n",
         "\n",
         "# Since layer parameters are initialized randomly, we will set a random seed for reproducibility\n",
