--- a/lab1/TF_Part1_Intro.ipynb
+++ b/lab1/TF_Part1_Intro.ipynb
@@ -500,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "7WXTpmoL6TDz"
       },
@@ -522,7 +522,7 @@
         "# Remember: dense layers are defined by the parameters W and b!\n",
         "# You can read more about the initialization of W and b in the TF documentation :)\n",
         "# https://www.tensorflow.org/api_docs/python/tf/keras/layers/Dense?version=stable\n",
-        "dense_layer = # TODO\n",
+        "dense_layer = tf.keras.layers.Dense(n_output_nodes, activation='sigmoid')\n",
         "\n",
         "# Add the dense layer to the model\n",
         "model.add(dense_layer)\n"
@@ -539,17 +539,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "sg23OczByRDb"
+        "id": "sg23OczByRDb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e2456133-e759-497c-c746-0e976e89d2cd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor([[0.16745028 0.08582257 0.36438766]], shape=(1, 3), dtype=float32)\n"
+          ]
+        }
+      ],
       "source": [
         "# Test model with example input\n",
         "x_input = tf.constant([[1,2.]], shape=(1,2))\n",
         "\n",
         "'''TODO: feed input into the model and predict the output!'''\n",
-        "model_output = # TODO\n",
+        "model_output = model(x_input)\n",
         "print(model_output)"
       ]
     },
@@ -564,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "K4aCflPVyViD"
       },
@@ -581,7 +593,7 @@
         "  def __init__(self, n_output_nodes):\n",
         "    super(SubclassModel, self).__init__()\n",
         "    '''TODO: Our model consists of a single Dense layer. Define this layer.'''\n",
-        "    self.dense_layer = '''TODO: Dense Layer'''\n",
+        "    self.dense_layer = tf.keras.layers.Dense(n_output_nodes, activation='sigmoid')\n",
         "\n",
         "  # In the call function, we define the Model's forward pass.\n",
         "  def call(self, inputs):\n",
@@ -600,11 +612,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "LhB34RA-4gXb"
+        "id": "LhB34RA-4gXb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a5f9c0a-44c4-4872-fdeb-bb1121c70531"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor([[0.3838927 0.0564152 0.7019198]], shape=(1, 3), dtype=float32)\n"
+          ]
+        }
+      ],
       "source": [
         "n_output_nodes = 3\n",
         "model = SubclassModel(n_output_nodes)\n",
