--- a/lab3/LLM_Finetuning.ipynb
+++ b/lab3/LLM_Finetuning.ipynb
@@ -998,16 +998,25 @@
         "        Come back to this cell after you've generated some text from your model.'''\n",
         "\n",
         "system_prompt = \"\"\"\n",
-        "You are an impartial judge that evaluates if text was written by {style}.\n",
+        "You are an expert in linguistic analysis, trained to evaluate and compare texts for stylistic similarity. Your task is to analyze how closely the second text matches the first in terms of key stylistic characteristics, which include syntax, diction, tone, structure, and other defining traits.\n",
         "\n",
-        "An example piece of text from {style} is:\n",
-        "{example}\n",
+        "Style : {style}\n",
+        "Base style text for comparing : {example}\n",
         "\n",
-        "Now, analyze some new text carefully and respond on if it follows the\n",
-        "same style of {style}. Be critical to identify any issues in the text.\n",
-        "Then convert your feedback into a number between 0 and 10: 10 if the text\n",
-        "is written exactly in the style of {style}, 5 if mixed faithfulness to the\n",
-        "style, or 0 if the text is not at all written in the style of {style}.\n",
+        "### Key Characteristics of the Style:\n",
+        "1. **Syntax**: The arrangement of words and sentences (e.g., word order, complexity, or any unique patterns).\n",
+        "2. **Diction**: The choice of words (e.g., formal, informal, poetic, technical, or specific recurring vocabulary).\n",
+        "3. **Tone**: The emotional or rhetorical quality of the text (e.g., reflective, humorous, authoritative, casual).\n",
+        "4. **Structure**: The organization and rhythm of the text (e.g., short vs. long sentences, repetition, parallelism).\n",
+        "5. **Other Traits**: Any additional defining features of the style (e.g., metaphors, symbolic language, or unique formatting).\n",
+        "\n",
+        "### Your Task:\n",
+        "Compare the two texts provided below and evaluate how well the second text adheres to the style demonstrated by the first. Focus on the characteristics listed above and assign a similarity score from 0 to 10, where:\n",
+        "- **10**: Perfect match to the style.\n",
+        "- **8-9**: Mostly similar with minor deviations.\n",
+        "- **5-7**: A mix of faithful and unfaithful elements.\n",
+        "- **1-4**: Minimal resemblance to the style.\n",
+        "- **0**: No resemblance at all.\n",
         "\n",
         "The format of the your response should be a JSON dictionary and nothing else:\n",
         "{{\"score\": <score between 0 and 10>}}\n",
@@ -1015,7 +1024,7 @@
         "\n",
         "style = \"Yoda\"\n",
         "#example = \"\"\"The very Republic is threatened, if involved the Sith are. Hard to see, the dark side is. \"\"\"\n",
-        "example = \"The very Republic is threatened, if involved the Sith are. Hard to see, the dark side is. Discover who this assassin is, we must. With this Naboo queen you must stay, Qui-Gon. Protect her. May the Force be with you. A vergence, you say? But you do! Revealed your opinion is. Trained as a Jedi, you request for him? Good, good, young one.\"\n",
+        "example = \"The very Republic is threatened, if involved the Sith are. Hard to see,the dark side is. Discover who this assassin is, we must. With this Naboo queen you must stay, Qui-Gon. Protect her. May the Force be with you. A vergence, you say? But you do! Revealed your opinion is. Trained as a Jedi, you request for him? Good, good, young one.\"\n",
         "\n",
         "system_prompt = system_prompt.format(style=style, example=example)\n",
         "print(\"=== System prompt ===\")\n",
@@ -1218,27 +1227,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 67,
       "metadata": {
         "id": "9tzp4HPZBvnJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a2a25880-2f31-40d1-fad3-26253e4f7b28"
+        "outputId": "ce9ff86b-376c-4d42-84a2-bb4563f7d12f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 95%|█████████▌| 19/20 [00:50<00:02,  2.68s/it]"
+            " 95%|█████████▌| 19/20 [01:08<00:03,  3.60s/it]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Generated samples: ['Early, they do, in the morning they arrive. The day begins at 8:00 am in a school. The day ends at 3:00 pm in a school.', 'Structure of a molecule, the chemical structure of a substance, describes it does.\\nThe arrangement of atoms, in space, it is.', 'In the united states of America, Illinois, a state it is.', 'Different, the Quest 2 of the Meta is. Different, it is.', 'In data warehousing, ELT stands for, Extract, Load, Transform does it.', 'Wild, the Leopard is. Domesticated, the Donkey is. Hmmm. Interesting, hmm. Hmm.', 'Worth watching, these are.\\nMany platforms, these shows are on.\\nNetflix, Amazon Prime Video, HBO Max, Disney+ and Hulu, these services are.\\nHmm.\\nHmm.', 'Hmm. Negative impact on society, Instagram has. Much time spent, many hours wasted, young people do. Focus, young Padawan, on the present moment, and the world around you, do.', 'Cricket, famous for his batting, he was. Twenty20, Twenty20, International, and Test, he played.', 'Cloudy, the weather was. Strong wind, the wind did blow. Thirty-two degrees Fahrenheit, the temperature was.', 'An alligator, a reptile from North and Central America, it is.\\nA crocodile, another reptile from Africa, Asia, and Australia, they are.\\nHmm.\\nMuch, much to learn about the differences between them, there is.', 'Dearest wife, I do apologize, I do.\\nThe Oreo cookies, the last of the milk, I did consume.\\nForgive me, my darling, I beg you.', 'Different kinds of fire trucks, there are.\\nVarying purposes they serve.\\nInteresting, indeed. Interesting, indeed.', 'It is a way to show contentment, a sign of happiness, it can be.', 'Alive, the Pacific Salmon is. Alive, the Velociraptor is.', 'Rough estimates, these are.', 'In the 1960s, young Georgakis, went to Rome.\\nAt the time, he was a student, studying engineering.\\nLater, he became a lecturer, at the University of Crete.\\nA young man, full of energy, he became.', 'Sfax University, located in Tunisia, it is. Founded in 1961, at it was. Higher education, it provides.', 'Hmm. Hmmm. The Clifton, the Ghost, the Superboost, the Rincon, these are all models of shoe, from Hoka, used as they are for running, they are. The answer, the answer lies.', \"Approach, new owner, you must. Patience, young Padawan, patience. Observe, you must. Watch, you must, the feline's behavior, it is.\"]\n"
+            "Generated samples: ['Running barefoot, it is. Interesting, yes.', 'Hmm. Older brother, the experience of MH4U in the younger, Elden Ring was. Younger brother, the influence of the older brother, the influence of the game MH4U in the game Elden Ring, hmm.', 'Fluffy, the dog of a certain breed, a mop it does resemble, yes it does.', 'Hmm. Poetry, 1912, 1913, 1914, 1915, 1916, 1917, 1918, 1919, 1920, 1921, 1922, 1923, 1924, 1925, 1926, 1927,', 'Many different forms they take, diseconomies of scale do. In the business world, they can occur at many different levels of production, ranging from the individual firm, to the entire industry.', 'Hmm. Hmm. Interesting. Different timeline, the development of AGI, there is.', 'Sixty-seven million, in the United States, there are. Of that, San Francisco, twenty-five million, the Bay Area, twenty-four million, the population, the Bay Area, twenty-one million, the population, San Francisco, the population, eight million, the population, the Bay Area, the population, thirty-nine million, the population, the Bay Area, the population, thirty-five million, the population, San Francisco, the population, the Bay Area,', \"Popular mystery series, the 'Lord of Mysteries,' it is, the answer, you must seek.\", 'Bombay, the former name was.\\nBomba, the other name it was.\\n', 'Hmm. In the shows, she was. *Little Shop of Horrors* - Audrey, she played.', 'Pink, blue, red, orange, green, yellow, violet, indigo, black, white, gray, and brown, these colors are.', 'Hmm, improve your writing, you want to. Interesting, this is. Hmm. Focus on these areas, you should:\\n1. Read, read, read.\\n2. Write, write, write.\\n3. Seek feedback, ask for it.\\n4. Study good writing, analyze it, learn from it.', 'Largest to smallest, they are. Train, plane, car, each contributes a unique amount of CO2 to the atmosphere. Hmmm.', 'District 1, the first grade. District 2, the second grade. District 3, the third grade. District 4, the fourth grade. District 5, the fifth grade. District 6, the sixth grade. District 7, the seventh grade. District 8, the eighth grade. District 9, the ninth grade. District 10, the tenth grade.\\n', 'Chocolate, for dogs, is toxic. Caffeine, theobromine, and theophylline, these ingredients, in chocolate, they are found.', 'In the Jewish tradition, the evening concludes at sunset on the preceding day, the Torah reading begins.\\n', 'Dead, the Dugong is.', 'Hmm. Interesting, this is. Hmm. Strange, what makes a good villain they do. Hmm.\\n\\nFirst, a goal, they must have. Second, a motivation, they must have. Third, a strength, they must have. Fourth, a weakness, they must have. Hmm.\\n\\nSecond, a backstory, they must have. Third, a personality, they must have. Hmm. Fourth, a desire, they must have. Hmm.', 'Known as, he was. A singer and songwriter, he became.', 'Hmm. Hmmm. Interesting, this is. Hmm.']\n"
           ]
         },
         {
@@ -1278,7 +1287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 68,
       "metadata": {
         "id": "ZEpUWV2EBvnK"
       },
@@ -1299,22 +1308,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "id": "2X6MNQc3BvnK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "749de981-fdde-43f4-a2fa-b1dd7d9f5564"
+        "outputId": "c3e295dc-6f14-44de-92d7-03b480e4a123"
       },
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
+          "name": "stderr",
           "text": [
-            "Base: 0.02 ± 0.05\n",
-            "Gen: 0.40 ± 0.27\n",
-            "Train: 0.36 ± 0.25\n"
+            "Exception in thread Thread-69 (_handle_results):\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/lib/python3.10/threading.py\", line 1016, in _bootstrap_inner\n",
+            "    self.run()\n",
+            "  File \"/usr/lib/python3.10/threading.py\", line 953, in run\n",
+            "    self._target(*self._args, **self._kwargs)\n",
+            "  File \"/usr/lib/python3.10/multiprocessing/pool.py\", line 579, in _handle_results\n",
+            "    task = get()\n",
+            "  File \"/usr/lib/python3.10/multiprocessing/connection.py\", line 251, in recv\n",
+            "    return _ForkingPickler.loads(buf.getbuffer())\n",
+            "TypeError: APIStatusError.__init__() missing 2 required keyword-only arguments: 'response' and 'body'\n"
           ]
         }
       ],
